# wgpu-template

./: LICENSE  index.html  package-lock.json  package.json
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: buffer_manager.rs  gpu_context.rs  lib.rs  pipeline_manager.rs  renderer.rs  texture_manager.rs
core/src/shader/: default.wgsl
src/: main.ts  style.css
